--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -12,4 +12,7 @@
     </div>
   
   </nav>
-<router-outlet></router-outlet>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+
