--- a/front-end/src/app/dialog/dialog.component.html
+++ b/front-end/src/app/dialog/dialog.component.html
@@ -10,8 +10,9 @@
   <div>
     <form [formGroup] = "uploadForm" (ngSubmit)="onSubmit()" enctype="form-data">      
       <div>
-        <input type="file" name="profile" (change)="onFileSelect($event)" />
+        <input type="file" name="profile" accept=".doc, .docx" (change)="onFileSelect($event)" />
       </div>
+      <br>
       <div>
         <button class="btn btn-success" type="submit">Upload</button>
       </div>
