--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -1,41 +1,107 @@
-  <div class="login">
-    <h2 class="login-header">Log in</h2>
-    <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
-
-        <!-- <div class="form-group">
-            <label>Email</label>
-            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': isSubmitted && f.email.errors }" />
-            <div *ngIf="isSubmitted && f.email.errors" class="invalid-feedback">
-                <div *ngIf="f.email.errors.required">Email is required</div>
-                <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
-            </div>
-        </div> -->
-
-        <div class="form-group">
-          <label>UserName</label>
-          <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': isSubmitted && f.username.errors }" />
-          <div *ngIf="isSubmitted && f.username.errors" class="invalid-feedback">
-              <div *ngIf="f.username.errors.required">Username is required</div>
-          </div>
+<div class="login">
+  <h2 class="login-header">Log in</h2>
+  <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
+    <div class="form-group">
+      <label>UserName</label>
+      <input
+        type="text"
+        formControlName="username"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': isSubmitted && f.username.errors }"
+      />
+      <div *ngIf="isSubmitted && f.username.errors" class="invalid-feedback">
+        <div *ngIf="f.username.errors.required">Username is required</div>
       </div>
+    </div>
 
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': isSubmitted && f.password.errors }" />
-            <div *ngIf="isSubmitted && f.password.errors" class="invalid-feedback">
-                <div *ngIf="f.password.errors.required">Password is required</div>
-                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-            </div>
+    <div class="form-group">
+      <label>Password</label>
+      <input
+        type="password"
+        formControlName="password"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': isSubmitted && f.password.errors }"
+      />
+      <div *ngIf="isSubmitted && f.password.errors" class="invalid-feedback">
+        <div *ngIf="f.password.errors.required">Password is required</div>
+        <div *ngIf="f.password.errors.minlength">
+          Password must be at least 6 characters
         </div>
-  
-      <div>
-        <input type="submit" value="Log in">
       </div>
+    </div>
+
+    <div>
+      <input type="submit" value="Log in" />
+    </div>
+
+    <div>Not a member?<a routerLink="/register">Sign up</a></div>
+  </form>
+
+  <div
+    *ngIf="isSubmitted && inValidUser"
+    class="alert alert-danger"
+    role="alert"
+  >
+    {{ errorMessage }}
+  </div>
+</div>
+<!-- <div class="main">
+  <div class="row">
+    <div class="col-md-6 col-sm-6 d-flex justify-content-center top-3">
+        <h3 class="heading-left">Login to Enterprise Trajectory</h3>
+        <div>
+
+        </div>
+    </div>
+      <div class="col-md-4 col-sm-4">
+        <div class="login-main-container">
+          <h2 class="login-header">Log in</h2>
+        <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
+          <div class="form-group">
+            <label>UserName</label>
+            <input
+              type="text"
+              formControlName="username"
+              class="form-control"
+              [ngClass]="{ 'is-invalid': isSubmitted && f.username.errors }"
+            />
+            <div *ngIf="isSubmitted && f.username.errors" class="invalid-feedback">
+              <div *ngIf="f.username.errors.required">Username is required</div>
+            </div>
+          </div>
       
-      <div>Not a member?<a routerLink="/register">Sign up</a></div>
-    </form>
-    
-  <div *ngIf="isSubmitted && inValidUser" class="alert alert-danger" role="alert">
-    {{errorMessage}}
+          <div class="form-group">
+            <label>Password</label>
+            <input
+              type="password"
+              formControlName="password"
+              class="form-control"
+              [ngClass]="{ 'is-invalid': isSubmitted && f.password.errors }"
+            />
+            <div *ngIf="isSubmitted && f.password.errors" class="invalid-feedback">
+              <div *ngIf="f.password.errors.required">Password is required</div>
+              <div *ngIf="f.password.errors.minlength">
+                Password must be at least 6 characters
+              </div>
+            </div>
+          </div>
+      
+          <div class="d-flex justify-content-center">
+            
+            <button class="btn btn-success" type="submit">Login</button>
+          </div>
+      
+          <div>Not a member?<a routerLink="/register">Sign up</a></div>
+        </form>
+      
+        <div
+          *ngIf="isSubmitted && inValidUser"
+          class="alert alert-danger"
+          role="alert"
+        >
+          {{ errorMessage }}
+        </div>
+        </div>
+      </div>
   </div>
-  </div>
+</div> -->
