--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Image and text -->
-<nav class="navbar navbar-light bg-light justify-content-between">
+<!-- <nav class="navbar navbar-light bg-light justify-content-between">
     <a class="navbar-brand" href="">
       <img src="./assets/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
       Enterprise Trajectory
@@ -9,10 +9,12 @@
       <button *ngIf="isLoggedin" (click)="logOut()" class="btn btn-outline-success my-2 my-sm-0">Log out</button> &nbsp;
       <!-- <button *ngIf="!isLoggedin" class="btn btn-outline-success my-2 my-sm-0">SignIn</button> &nbsp;
       <button *ngIf="!isLoggedin" class="btn btn-outline-success my-2 my-sm-0">SignUp</button> -->
-    </div>
+<!-- </div>
   
   </nav>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
+ -->
 
+ <router-outlet></router-outlet>
