--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,34 @@
-<div *ngIf="rawData">
+
+<div class="row">
+  <div class="col-md-4 login-sec">
+    <h2 class="text-center">Find Jobs</h2>
+    <form [formGroup]="loginForm" class="login-form" (ngSubmit)="findJobs()">
+      <div class="form-group">
+        <label for="what" class="text-uppercase">What</label>
+        <input type="text" class="form-control" formControlName="username" placeholder="Job title, Keywords or Company">
+      </div>
+      <div class="form-group">
+        <label for="where" class="text-uppercase">Where</label>
+        <input type="password" formControlName="password" class="form-control" placeholder="Kansas City, MO">
+       
+      </div>
+
+
+      <div class="form-check">
+        <button type="submit" class="btn btn-login float-right">Find Jobs</button>
+      </div>
+    </form>
+
+
+  </div>
+
+</div>
+
+
+
+<!-- <div *ngIf="rawData">
   <h3>Raw Data from uploaded Resume </h3>
   <div>
     {{rawData}}
   </div>
-</div>
+</div> -->
