--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -1,4 +1,121 @@
-<div class="login">
+<section class="login-block">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 login-sec">
+        <h2 class="text-center">Login Now</h2>
+        <form [formGroup]="loginForm" class="login-form" (ngSubmit)="login()">
+                  <div class="form-group">
+                    <label for="exampleInputEmail1" class="text-uppercase">Username</label>
+                    <input type="text" class="form-control" formControlName="username" placeholder=""  [ngClass]="{ 'is-invalid': isSubmitted && f.username.errors }">
+                    <div *ngIf="isSubmitted && f.username.errors" class="invalid-feedback">
+                      <div *ngIf="f.username.errors.required">Username is required</div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleInputPassword1" class="text-uppercase">Password</label>
+                    <input type="password"  formControlName="password" class="form-control" placeholder="" [ngClass]="{ 'is-invalid': isSubmitted && f.password.errors }">
+                    <div *ngIf="isSubmitted && f.password.errors" class="invalid-feedback">
+                      <div *ngIf="f.password.errors.required">Password is required</div>
+                      <div *ngIf="f.password.errors.minlength">
+                        Password must be at least 6 characters
+                      </div>
+                    </div>
+                  </div>
+        
+        
+                  <div class="form-check">
+                    <label class="form-check-label">
+                      <!-- <input type="checkbox" class="form-check-input"> -->
+                      <small>Not a member?<a routerLink="/register">Sign up</a></small>
+                    </label>
+                    <button type="submit" class="btn btn-login float-right">Submit</button>
+                  </div>
+                  <!-- <div>Not a member?<a routerLink="/register">Sign up</a></div> -->
+                </form>
+                <div
+                *ngIf="isSubmitted && inValidUser"
+                class="alert alert-danger"
+                role="alert"
+              >
+                {{ errorMessage }}
+              </div>
+          
+        <!-- <form class="login-form">
+          <div class="form-group">
+            <label for="exampleInputEmail1" class="text-uppercase">Username</label>
+            <input type="text" class="form-control" placeholder="">
+
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1" class="text-uppercase">Password</label>
+            <input type="password" class="form-control" placeholder="">
+          </div>
+
+
+          <div class="form-check">
+            <label class="form-check-label">
+              <input type="checkbox" class="form-check-input">
+              <small>Remember Me</small>
+            </label>
+            <button type="submit" class="btn btn-login float-right">Submit</button>
+          </div>
+
+        </form>
+        <div class="copy-text">Created with <i class="fa fa-heart"></i> by Grafreez</div> -->
+      </div>
+      <div class="col-md-8 banner-sec">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="https://static.pexels.com/photos/33972/pexels-photo.jpg"
+                alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <div class="banner-text">
+                  <h2>Enterprise Trajectory</h2>
+                  <p>This application is a solution for that problem by suggesting the technologies based on the current market trend.</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://images.pexels.com/photos/7097/people-coffee-tea-meeting.jpg"
+                alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <div class="banner-text">
+                  <h2>This is Heaven</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://images.pexels.com/photos/872957/pexels-photo-872957.jpeg"
+                alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <div class="banner-text">
+                  <h2>This is Heaven</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+<!-- <div class="login">
   <h2 class="login-header">Log in</h2>
   <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
     <div class="form-group">
@@ -45,6 +162,13 @@
     {{ errorMessage }}
   </div>
 </div>
+ -->
+
+
+ 
+
+
+
 <!-- <div class="main">
   <div class="row">
     <div class="col-md-6 col-sm-6 d-flex justify-content-center top-3">
