--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -24,6 +24,23 @@
 
 </div>
 
+<h2>Jobs</h2>
+
+<div class="row">
+    <div class="col-md-8">
+      <mat-card class="example-card" *ngFor="let job of jobsData">
+        <mat-card-header (click)="getDescription(job.link)">
+          <!-- <mat-icon>more_vert</mat-icon>
+          <div mat-card-avatar class="example-header-image"></div> -->
+          <mat-card-title>{{job.name}}</mat-card-title>
+          <mat-card-subtitle>{{job.company}} &nbsp; {{job.rating}}</mat-card-subtitle>
+          <mat-card-subtitle>{{job.location}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>{{job.summary}}</mat-card-content>
+      </mat-card>
+    </div>
+</div>
+
 
 
 <!-- <div *ngIf="rawData">
