--- a/front-end/src/app/dashboard/dashboard.component.css
+++ b/front-end/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,18 @@
+
+.mat-card{
+    margin-bottom: 20px;
+}
+
+.row{
+    align-items: center;
+    display: flex;
+  justify-content: center;
+}
+
+h2{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 .login-block{
     background: #DE6262;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);  /* Chrome 10-25, Safari 5.1-6 */
@@ -21,3 +36,8 @@ padding : 50px 0;
 .banner-text h2{color:#fff; font-weight:600;}
 .banner-text h2:after{content:" "; width:100px; height:5px; background:#FFF; display:block; margin-top:20px; border-radius:3px;}
 .banner-text p{color:#fff;}
+
+/* .form-group{
+    display: inline-block;
+} */
+
