--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -1,21 +1,42 @@
+<nav class="navbar navbar-light bg-light justify-content-between">
+  <a class="navbar-brand" href="">
+    <img src="./assets/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    Enterprise Trajectory
+  </a>
+  
+  <div class="form-inline">
+    <button (click)="logOut()" class="btn btn-login float-right">Log out</button> &nbsp;
+ </div>
+</nav>
+
 
 <div class="row">
-  <div class="col-md-4 login-sec">
+  <div class="login-sec">
     <h2 class="text-center">Find Jobs</h2>
     <form [formGroup]="loginForm" class="login-form" (ngSubmit)="findJobs()">
-      <div class="form-group">
-        <label for="what" class="text-uppercase">What</label>
-        <input type="text" class="form-control" formControlName="username" placeholder="Job title, Keywords or Company">
-      </div>
-      <div class="form-group">
-        <label for="where" class="text-uppercase">Where</label>
-        <input type="password" formControlName="password" class="form-control" placeholder="Kansas City, MO">
-       
-      </div>
-
-
-      <div class="form-check">
-        <button type="submit" class="btn btn-login float-right">Find Jobs</button>
+      <div class="row col-md-12">
+        <div class="col-md-5">
+          <div class="form-group">
+            <label for="what" class="text-uppercase">What</label>
+            <input type="text" class="form-control" formControlName="username" placeholder="Job title, Keywords or Company">
+          </div>
+        </div>
+        <div class="col-md-5">
+          <div class="form-group">
+            <label for="where" class="text-uppercase">Where</label>
+            <input type="password" formControlName="password" class="form-control" placeholder="Kansas City, MO">
+    
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="form-check">
+            <label class="form-check-label">
+              <!-- <input type="checkbox" class="form-check-input"> -->
+             
+            </label>
+            <button type="submit" class="btn btn-login float-right">Find</button>
+          </div>
+        </div>
       </div>
     </form>
 
@@ -24,21 +45,23 @@
 
 </div>
 
-<h2>Jobs</h2>
+<h5 align="center"><a [routerLink]="" (click)="upload()">Post Your Resume</a> - It only takes few seconds</h5>
+
+<h2 align="center">Jobs</h2>
 
 <div class="row">
-    <div class="col-md-8">
-      <mat-card class="example-card" *ngFor="let job of jobsData">
-        <mat-card-header (click)="getDescription(job.link)">
-          <!-- <mat-icon>more_vert</mat-icon>
+  <div class="col-md-8">
+    <mat-card class="example-card" *ngFor="let job of jobsData">
+      <mat-card-header (click)="getDescription(job.link)">
+        <!-- <mat-icon>more_vert</mat-icon>
           <div mat-card-avatar class="example-header-image"></div> -->
-          <mat-card-title>{{job.name}}</mat-card-title>
-          <mat-card-subtitle>{{job.company}} &nbsp; {{job.rating}}</mat-card-subtitle>
-          <mat-card-subtitle>{{job.location}}</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>{{job.summary}}</mat-card-content>
-      </mat-card>
-    </div>
+        <mat-card-title>{{job.name}}</mat-card-title>
+        <mat-card-subtitle>{{job.company}} &nbsp; {{job.rating}}</mat-card-subtitle>
+        <mat-card-subtitle>{{job.location}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>{{job.summary}}</mat-card-content>
+    </mat-card>
+  </div>
 </div>
 
 
