--- a/front-end/src/app/dialog/dialog.component.html
+++ b/front-end/src/app/dialog/dialog.component.html
@@ -17,6 +17,7 @@
         <button class="btn btn-success" type="submit">Upload</button>
       </div>
     </form>
+    <div *ngIf="resumeData">Resume Uploaded Successfully!!!!</div>
   </div>
 </div>
 <div mat-dialog-actions>
