Added job description dialog and stats

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -7,9 +7,9 @@
     
     <div class="form-inline">
       <button *ngIf="isLoggedin" (click)="logOut()" class="btn btn-outline-success my-2 my-sm-0">Log out</button> &nbsp;
-      <!-- <button *ngIf="!isLoggedin" class="btn btn-outline-success my-2 my-sm-0">SignIn</button> &nbsp;
-      <button *ngIf="!isLoggedin" class="btn btn-outline-success my-2 my-sm-0">SignUp</button> -->
-<!-- </div>
+       <button *ngIf="!isLoggedin" class="btn btn-outline-success my-2 my-sm-0">SignIn</button> &nbsp;
+      <button *ngIf="!isLoggedin" class="btn btn-outline-success my-2 my-sm-0">SignUp</button>
+ </div>
   
   </nav>
   <div class="container">
