--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -5,6 +5,8 @@
   </a>
   
   <div class="form-inline">
+    <!-- <a href="https://www.indeed.com/jobs?q=developer&l=New%20York%2C%20NY&from=career&vjk=5e4e67b8fc22b2c0" target="_blank">Click Here</a> -->
+    <button (click)="logOut()" class="btn btn-login float-right">Carrer Advice</button> &nbsp;
     <button (click)="logOut()" class="btn btn-login float-right">Log out</button> &nbsp;
  </div>
 </nav>
