changed jobs component

--- a/front-end/src/app/job-description/job-description.component.html
+++ b/front-end/src/app/job-description/job-description.component.html
@@ -1,9 +1,13 @@
+<button mat-icon-button class="close-button" [mat-dialog-close]="true">
+    <mat-icon class="close-icon" color="warn">close</mat-icon>
+  </button>
+  
 <div mat-dialog-title>
     <div>{{jobData.name}}</div>
     <div>{{jobData.company}}&nbsp; {{jobData.rating}}</div>
     <div>{{jobData.location}}</div>
     <div>
-        <button class="btn btn-success"><a href={{jobData.link}} target="_blank">Apply</a></button>
+        <button class="btn btn-login"><a href={{jobData.link}} target="_blank">Apply</a></button>
     </div>
 </div>
 <div mat-dialog-content>
@@ -12,5 +16,5 @@
     </div>
 </div>
 <mat-dialog-actions align="right">
-	<button class="btn btn-success" mat-dialog-close tabindex="-1">Close</button>
+	<button class="btn btn-login" mat-dialog-close tabindex="-1">Close</button>
 </mat-dialog-actions>
