--- a/front-end/src/app/jobs/jobs.component.html
+++ b/front-end/src/app/jobs/jobs.component.html
@@ -12,9 +12,9 @@
       </mat-card-header>
       <mat-card-content>
         <div>
-          <button class="btn btn-success"><a href={{job.link}} target="_blank">Apply</a></button>
+          <button class="btn btn-login"><a href={{job.link}} target="_blank">Apply</a></button>
         </div>
-        <div>
+        <div class="summary">
           {{job.summary}}
         </div>
       </mat-card-content>
