--- a/front-end/src/app/jobs/jobs.component.css
+++ b/front-end/src/app/jobs/jobs.component.css
@@ -31,12 +31,28 @@ padding : 50px 0;
 .login-sec .copy-text a{color:#E36262;}
 .login-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #DE6262;}
 .login-sec h2:after{content:" "; width:100px; height:5px; background:#FEB58A; display:block; margin-top:20px; border-radius:3px; margin-left:auto;margin-right:auto}
-.btn-login{background: #DE6262; color:#fff; font-weight:600;}
+.btn-login{background: #DE6262; color:#fff; font-weight:600;margin: 0 16px;}
 .banner-text{width:70%; position:absolute; bottom:40px; padding-left:20px;}
 .banner-text h2{color:#fff; font-weight:600;}
 .banner-text h2:after{content:" "; width:100px; height:5px; background:#FFF; display:block; margin-top:20px; border-radius:3px;}
 .banner-text p{color:#fff;}
 
+.my-class .mat-dialog-container{
+    border-radius: 10px;
+    background: lightcyan;
+    color: #039be5;
+  }
+.summary{
+    margin: 0 16px;
+    padding-top: 10px;
+
+}
+
+  a {
+    color:white; 
+    /* text-decoration: none; */
+    background-color: transparent;
+}
 /* .form-group{
     display: inline-block;
 } */
