--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -6,6 +6,8 @@
 } 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+
+@import '~material-design-icons/iconfont/material-icons.css';
 @import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
 .login-block{
     background: #DE6262;  /* fallback for old browsers */
