--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -6,55 +6,54 @@
   
   <div class="form-inline">
     <!-- <a href="https://www.indeed.com/jobs?q=developer&l=New%20York%2C%20NY&from=career&vjk=5e4e67b8fc22b2c0" target="_blank">Click Here</a> -->
-    <button (click)="logOut()" class="btn btn-login float-right">Carrer Advice</button> &nbsp;
+    <button (click)="carrer()" class="btn btn-login float-right">Carrer Advice</button> &nbsp;
     <button (click)="logOut()" class="btn btn-login float-right">Log out</button> &nbsp;
  </div>
 </nav>
 
-
-<div class="row">
-  <div class="login-sec">
-    <h2 class="text-center">Find Jobs</h2>
-    <form [formGroup]="jobsForm" class="login-form" (ngSubmit)="findJobs()">
-      <div class="row col-md-12">
-        <div class="col-md-5">
-          <div class="form-group">
-            <label for="what" class="text-uppercase">What</label>
-            <input type="text" class="form-control" formControlName="jobKeywords" placeholder="Job title, Keywords or Company">
+<div class="container">
+  <div class="row">
+    <div class="login-sec">
+      <h2 class="text-center">Find Jobs</h2>
+      <form [formGroup]="jobsForm" class="login-form" (ngSubmit)="findJobs()">
+        <div class="row col-md-12">
+          <div class="col-md-5">
+            <div class="form-group">
+              <label for="what" class="text-uppercase">What</label>
+              <input type="text" class="form-control" formControlName="jobKeywords" placeholder="Job title, Keywords or Company">
+            </div>
+          </div>
+          <div class="col-md-5">
+            <div class="form-group">
+              <label for="where" class="text-uppercase">Where</label>
+              <input type="text" formControlName="location" class="form-control" placeholder="Kansas City, MO">
+      
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="form-check">
+              <label class="form-check-label">
+                <!-- <input type="checkbox" class="form-check-input"> -->
+               
+              </label>
+              <button type="submit" class="btn btn-login float-right">Find</button>
+            </div>
           </div>
         </div>
-        <div class="col-md-5">
-          <div class="form-group">
-            <label for="where" class="text-uppercase">Where</label>
-            <input type="text" formControlName="location" class="form-control" placeholder="Kansas City, MO">
-    
-          </div>
-        </div>
-        <div class="col-md-2">
-          <div class="form-check">
-            <label class="form-check-label">
-              <!-- <input type="checkbox" class="form-check-input"> -->
-             
-            </label>
-            <button type="submit" class="btn btn-login float-right">Find</button>
-          </div>
-        </div>
-      </div>
-    </form>
-
-
+      </form>
+  
+  
+    </div>
+  
   </div>
-
+  
+  <h5 align="center"><a [routerLink]="" (click)="upload()">Post Your Resume</a> - It only takes few seconds</h5>
+  
+  <div>
+    <!-- <app-jobs></app-jobs> -->
+    <router-outlet></router-outlet>
+  </div>
 </div>
-
-<h5 align="center"><a [routerLink]="" (click)="upload()">Post Your Resume</a> - It only takes few seconds</h5>
-
-<div>
-  <app-jobs [formValue]="jobsFormValue"></app-jobs>
-</div>
-
-
-
 
 <!-- <div *ngIf="rawData">
   <h3>Raw Data from uploaded Resume </h3>
