--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-light bg-light justify-content-between">
-  <a class="navbar-brand" href="">
+  <a class="navbar-brand" (click)="onClick()">
     <img src="./assets/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
     Enterprise Trajectory
   </a>
 
   <div class="form-inline">
     <!-- <a href="https://www.indeed.com/jobs?q=developer&l=New%20York%2C%20NY&from=career&vjk=5e4e67b8fc22b2c0" target="_blank">Click Here</a> -->
-    <button (click)="carrer()" class="btn btn-login float-right">Carrer Advice</button> &nbsp;
+    <button (click)="carrer()" class="btn btn-login float-right">Career Advice</button> &nbsp;
     <button (click)="logOut()" class="btn btn-login float-right">Log out</button> &nbsp;
   </div>
 </nav>
