--- a/front-end/src/app/carrer/carrer.component.html
+++ b/front-end/src/app/carrer/carrer.component.html
@@ -9,10 +9,11 @@
           <div mat-dialog-title>
             <div>{{carrer.jobTitle}}</div>
             <div>{{carrer.openings}}</div>
-            <div>{{carrer.average}}&nbsp;{{carrer.salary}}&nbsp;{{carrer.period}}</div>
-            <div>Location: {{carrer.location}}</div>
+            <div>{{carrer.average}} : &nbsp;{{carrer.salary}}&nbsp;{{carrer.period}}</div>
+            <!-- <div>Location: {{carrer.location}}</div> -->
             <div>
-              <button class="btn btn-login"><a href={{carrer.jobsLink}} target="_blank">Apply</a></button>
+              <!-- <button class="btn btn-login"><a (click)="openRespectiveJobs(carrer.jobsLink)" href={{carrer.jobsLink}} target="_blank">Apply</a></button> -->
+              <button class="btn btn-login" (click)="openRespectiveJobs(carrer.jobsLink)">See Openings</button>
             </div>
           </div>
         </mat-card>
@@ -52,6 +53,35 @@
       </div>
 
     </div>
+  </mat-tab>
+  <mat-tab label="Stats">
+    <div class="tabHeading">
+      <h3>Statistics for Software Engineers in {{searchValue}}</h3>
+    </div>
+    
+      <div *ngIf="showChart" style="display: block">
+        <canvas baseChart
+                [datasets]="barChartData"
+                [labels]="barChartLabels"
+                [options]="barChartOptions"
+                [legend]="barChartLegend"
+                [chartType]="barChartType"
+                >
+        </canvas>
+      </div>
+
+      <div *ngIf="showChart" style="display: block;">
+        <canvas baseChart
+          [datasets]="lineChartData"
+          [labels]="lineChartLabels"
+          [options]="lineChartOptions"
+          [colors]="lineChartColors"
+          [legend]="lineChartLegend"
+          [chartType]="lineChartType"
+        >
+        </canvas>
+      </div>
+    
   </mat-tab>
 </mat-tab-group>
 
