--- a/front-end/src/app/dialog/dialog.component.html
+++ b/front-end/src/app/dialog/dialog.component.html
@@ -17,7 +17,8 @@
         <button class="btn btn-success" type="submit">Upload</button>
       </div>
     </form>
-    <div *ngIf="resumeData">Resume Uploaded Successfully!!!!</div>
+    <!-- <div *ngIf="resumeData">Resume Uploaded Successfully!!!!</div> -->
+    <div *ngIf="resumeData">{{uploadMessage}}</div>
   </div>
 </div>
 <div mat-dialog-actions>
